# deno_rwasm_console_log

./: Cargo.toml  README.md  build.ts  test.ts
src/: lib.rs
