[package]
name = "deno_rwasm_console_log"
description = "WASM bindings to console log function"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.73"
web-sys = { version = "0.3", features = [ "console" ] }

[profile.release]
lto = true
opt-level = "z"